# curso_FastAPI

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 3ee3ebedfb17_create_todo_table.py  83f04899d6cf_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
